[gd_scene load_steps=13 format=3 uid="uid://ui4daufc78s"]

[ext_resource type="Texture2D" uid="uid://dw8n07s8hfar0" path="res://board/wood_texture.jpg" id="1_bwjgb"]
[ext_resource type="Script" uid="uid://c3or1g3g0rio5" path="res://ui/menu.gd" id="1_cp6tm"]
[ext_resource type="Texture2D" uid="uid://c55ld4v0kryhn" path="res://ui/assets/title.png" id="2_l8jcj"]
[ext_resource type="Texture2D" uid="uid://flf2fiipa5nc" path="res://ui/assets/button_normal.png" id="2_udkah"]
[ext_resource type="Texture2D" uid="uid://cple8snaikfg5" path="res://ui/assets/button_pressed.png" id="3_2ot4n"]
[ext_resource type="Texture2D" uid="uid://db8lev7uthdqs" path="res://ui/assets/button_hover.png" id="4_fcydj"]
[ext_resource type="Texture2D" uid="uid://7t5dsdkky6cb" path="res://ui/assets/hotseat.png" id="5_0bcp5"]
[ext_resource type="Texture2D" uid="uid://cg54iuw3aowyi" path="res://ui/assets/random.png" id="6_l8jcj"]
[ext_resource type="Texture2D" uid="uid://cj8rgkk174dl0" path="res://ui/assets/friend.png" id="7_cp6tm"]
[ext_resource type="Texture2D" uid="uid://bfcheqmj7qpq1" path="res://ui/assets/panel.png" id="10_2fd1n"]
[ext_resource type="Script" uid="uid://dl22fdr41d8t" path="res://ui/panel.gd" id="10_oumb1"]
[ext_resource type="Texture2D" uid="uid://cqpoyxypau0jj" path="res://ui/assets/connecting.png" id="11_cop0s"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cp6tm")

[node name="WoodTexture" type="Sprite2D" parent="."]
position = Vector2(570, 361)
scale = Vector2(0.621, 0.621)
texture = ExtResource("1_bwjgb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -70
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = -70
theme_override_constants/margin_bottom = 40

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_l8jcj")
expand_mode = 5
stretch_mode = 4

[node name="HotseatButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
texture_normal = ExtResource("2_udkah")
texture_pressed = ExtResource("3_2ot4n")
texture_hover = ExtResource("4_fcydj")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/HotseatButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 27
theme_override_constants/margin_bottom = 27

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/HotseatButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("5_0bcp5")
expand_mode = 2
stretch_mode = 5

[node name="RandomButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
texture_normal = ExtResource("2_udkah")
texture_pressed = ExtResource("3_2ot4n")
texture_hover = ExtResource("4_fcydj")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/RandomButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 27
theme_override_constants/margin_bottom = 27

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/RandomButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_l8jcj")
expand_mode = 2
stretch_mode = 5

[node name="FriendButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
texture_normal = ExtResource("2_udkah")
texture_pressed = ExtResource("3_2ot4n")
texture_hover = ExtResource("4_fcydj")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/FriendButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 27
theme_override_constants/margin_bottom = 27

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/FriendButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_cp6tm")
expand_mode = 2
stretch_mode = 5

[node name="Panel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_oumb1")

[node name="Texture" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.5
offset_top = -189.5
offset_right = 279.5
offset_bottom = 189.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_2fd1n")

[node name="TextureRect" type="TextureRect" parent="Panel/Texture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -53.0
offset_right = 161.5
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_cop0s")

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/HotseatButton" to="." method="_on_hotseat_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/RandomButton" to="." method="_on_random_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/FriendButton" to="." method="_on_friend_button_pressed"]
